2006-11-15  John W. Eaton  <jwe@octave.org>

	* run-octave.in: Don't forget LD_PRELOAD if there are args.

2006-11-14  John W. Eaton  <jwe@octave.org>

	* configure.in: If warning message is printed, print additional
	final note about missing libraries.

2006-11-13  John W. Eaton  <jwe@octave.org>

	* octave.cc (maximum_braindamage): Disable
	Octave:fopen-file-in-path and Octave:load-file-in-path warnings.

	* run-octave.in: Substitute liboctinterp, liboctave, and libcruft.
	Use them to set LD_PRELOAD.
	* Makeconf.in (do-subst-script-vals): Also substitute
	liboctinterp, liboctave, and libcruft.

2006-11-13  Rafael Laboissiere  <rafael@debian.org>

	* mkoctfile.in: Add -Wl,... options to ldflags, not pass_on_flags.

2006-11-11  John W. Eaton  <jwe@octave.org>

	* examples/Makefile.in (octave.desktop):
	Use $(simple-move-if-change-rule) here.

	* Makeconf.in (simple-move-if-change-rule,
	(builddir-move-if-change-rule): New macros.

2006-11-11  Soren Hauberg  <soren@hauberg.org>

	* examples/Makefile.in (uninstall): Add missing semicolon.

2006-11-09  John W. Eaton  <jwe@octave.org>

	* examples/Makefile.in (uninstall): New target.

2006-11-09  Michael Goffioul  <michael.goffioul@swing.be>

	* configure.in (OCTAVE_LOCAL_BUFFER): Don't access first element
	if size is 0.

2006-11-06  Michael Goffioul  <michael.goffioul@swing.be>

	* configure.in (CRUFT_DLL_DEFS, OCTAVE_DLL_DEFS, OCTINTERP_DLL_DEFS):
	Also rename in AC_SUBST calls.
	* Makeconf.in (ALL_CFLAGS): Use DLL_CDEFS instead of XTRA_CDEFS.
	(ALL_CXXFLAGS): Use DLL_CDEFS instead of XTRA_CXXDEFS.

2006-11-03  John W. Eaton  <jwe@octave.org>

	* configure.in (CRUFT_DLL_DEFS): Rename from XTRA_CRUFT_DEFS.
	(OCTAVE_DLL_DEFS): Rename from XTRA_OCTAVE_DEFS.
	(OCTINTERP_DLL_DEFS): Rename from XTRA_OCTINTERP_DEFS.
	(XTRA_CRUFT_LINK_FLAGS): Rename from XTRA_CRUFT_LINK_DEPS.

2006-11-02  John W. Eaton  <jwe@octave.org>

	* README.Cygwin: Rename from README.Windows.
	* README.MSVC: New file.