@@ -1,5 +1,10 @@
 2006-11-22  David Bateman  <dbateman@free.fr>
 
+	* oct-sparse.h: Allow sparse headers to also be in a sparsesuite
+	sub-directory.
+
+2006-11-22  David Bateman  <dbateman@free.fr>
+
         * dSparse.cc (SparseMatrix SparseMatrix::inverse(...)): Transpose
 	the matrix type as well when calling tinverse for lower
 	triangular
